# cmdline

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  test.cpp  test2.cpp
examples/: CMakeLists.txt  test.cpp  test2.cpp
examples/shell/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp
include/cmdline/: cmdline  cmdline.h
include/cmdline/internal/: cmdline.h
